[tool.poetry]
name = "repl_python3_Holmes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
humanize = "^3.7.1"
art = "^5.2"
portolan = "^1.0.1"
psutil = "^5.8.0"
aiohttp = "^3.7.4"
html2text = "^2020.1.16"
replit = "^3.1.0"
ordinal = "^1.0.3"
imutils = "^0.5.4"
opencv-python = "^4.5.2"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
